--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -2,17 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
     android:background="@color/primaryColor"
+    android:orientation="vertical"
+    android:gravity="center"
     android:padding="24dp">
 
     <TextView
-        android:id="@+id/adminWelcomeText"
+        android:id="@+id/bienvenidaAdminText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bienvenido Administrador"
-        android:textColor="@color/textColor"
         android:textSize="24sp"
+        android:textColor="@android:color/white"
         android:textStyle="bold" />
 </LinearLayout>
