--- a/app/src/main/res/layout/activity_sala_reserva.xml
+++ b/app/src/main/res/layout/activity_sala_reserva.xml
@@ -98,31 +98,31 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp">
+            android:layout_marginBottom="8dp"
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="8dp"
                 android:text=" Disponible"
-                android:textColor="#4CAF50"
-                android:padding="8dp" />
+                android:textColor="#4CAF50" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="8dp"
                 android:text="Pendiente"
-                android:textColor="#FFA726"
-                android:padding="8dp" />
+                android:textColor="#FFA726" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="8dp"
                 android:text=" Ocupado"
-                android:textColor="#E53935"
-                android:padding="8dp" />
+                android:textColor="#E53935" />
         </LinearLayout>
 
     </LinearLayout>
