--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -47,12 +47,21 @@
             android:textColor="@color/primaryColor" />
 
         <Button
+            android:id="@+id/btnAceptarUsers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Aceptar Nuevos Usuarios"
+            android:layout_marginBottom="16dp"
+            android:backgroundTint="@color/accentColor"
+            android:textColor="@color/primaryColor" />
+
+        <Button
             android:id="@+id/btnCalendario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ver Calendario"
             android:layout_marginBottom="16dp"
             android:backgroundTint="@color/accentColor"
+            android:text="Ver Calendario"
             android:textColor="@color/primaryColor" />
 
         <Button
