--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,69 +1,74 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="24dp"
-    android:gravity="center"
     android:background="@color/primaryColor"
     tools:context=".LoginActivity">
 
-    <ImageView
-        android:id="@+id/logoImageView"
-        android:layout_width="481dp"
-        android:layout_height="275dp"
-        android:layout_marginBottom="32dp"
-        android:contentDescription="Logo del Colegio"
-        android:src="@drawable/logo" />
-
-    <EditText
-        android:id="@+id/emailEditText"
-        android:hint="Correo electrónico"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:padding="12dp"
-        android:backgroundTint="@color/accentColor"
-        android:textColorHint="@color/textColor"
-        android:textColor="@color/textColor" />
+        android:padding="24dp"
+        android:gravity="center">
 
-    <EditText
-        android:id="@+id/passwordEditText"
-        android:hint="Contraseña"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:padding="12dp"
-        android:layout_marginTop="12dp"
-        android:backgroundTint="@color/accentColor"
-        android:textColorHint="@color/textColor"
-        android:textColor="@color/textColor" />
+        <ImageView
+            android:id="@+id/logoImageView"
+            android:layout_width="481dp"
+            android:layout_height="275dp"
+            android:layout_marginBottom="32dp"
+            android:contentDescription="Logo del Colegio"
+            android:src="@drawable/logo" />
 
-    <Button
-        android:id="@+id/loginButton"
-        android:text="Iniciar Sesión"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="@color/accentColor"
-        android:textColor="@color/primaryColor"
-        android:textStyle="bold" />
+        <EditText
+            android:id="@+id/emailEditText"
+            android:hint="Correo electrónico"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:padding="12dp"
+            android:backgroundTint="@color/accentColor"
+            android:textColorHint="@color/textColor"
+            android:textColor="@color/textColor" />
 
-    <TextView
-        android:id="@+id/goToRegisterTextView"
-        android:text="¿No tienes cuenta? Regístrate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:textColor="@color/textColor"
-        android:textStyle="italic" />
-    <TextView
-        android:id="@+id/forgotPasswordTextView"
-        android:text="¿Olvidaste tu contraseña?"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/textColor"
-        android:layout_marginTop="16dp"/>
+        <EditText
+            android:id="@+id/passwordEditText"
+            android:hint="Contraseña"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:padding="12dp"
+            android:layout_marginTop="12dp"
+            android:backgroundTint="@color/accentColor"
+            android:textColorHint="@color/textColor"
+            android:textColor="@color/textColor" />
 
+        <Button
+            android:id="@+id/loginButton"
+            android:text="Iniciar Sesión"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:backgroundTint="@color/accentColor"
+            android:textColor="@color/primaryColor"
+            android:textStyle="bold" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/goToRegisterTextView"
+            android:text="¿No tienes cuenta? Regístrate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textColor="@color/textColor"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/forgotPasswordTextView"
+            android:text="¿Olvidaste tu contraseña?"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/textColor"
+            android:layout_marginTop="16dp"/>
+    </LinearLayout>
+</ScrollView>
