--- a/app/src/main/res/layout/activity_sala_reserva.xml
+++ b/app/src/main/res/layout/activity_sala_reserva.xml
@@ -14,7 +14,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Horario de Reservas de Sala 1"
+            android:text="Horario de Reservas de Lab. 1"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="#188F97"
